# Kairos

./: .gitignore  CMakeLists.txt  README.md  archive  clean.sh  kairos.h  run.sh  serialization.index
include/: conf.h  constants.h  floating_point.h  util.h  utils.h
include/archive/: BasicArchive.h  InputArchive.h  OutputArchive.h  archive.h  archive_manager.h  basic_archive.h  in_archive.h  input_archive.h  io_archive.h  ioarchive.h  out_archive.h  output_archive.h
include/archive/templates/: archive.templates.h  basic_archive.templates.h
include/archive/type/: matrix.h  vector.h  vector_archive.h
include/archive/types/: binary.h  binary_archive.h  text.h  text_archive.h
include/exception/: ArchiveException.h  SerializationException.h  archive_exception.h  exception.h  kairos_exception.h  serialization_exception.h
include/serialization/: serializable.h  serialization.h  serialization.template.h
include/serialization/templates/: serialization.template.h  serialization.templates.h
include/serialization/type/: built_in.h  demangle_type.h  vector.h
src/: constants.cpp
src/archive/: BasicArchive.cpp  InputArchive.cpp  OutputArchive.cpp  archive.cpp  archive_manager.cpp  basic_archive.cpp  in_archive.cpp  ioarchive.cpp  out_archive.cpp
src/exception/: ArchiveException.cpp  SerializationException.cpp  archive_exception.cpp  exception.cpp  kairos_exception.cpp  serialization_exception.cpp  serialization_exception.h
src/serialization/: serializable.cpp  serialization.cpp
test/: test.cpp  test_archive.cpp  test_serialization.cpp
(+9 files in other folders)
